Added back button and minor UI tweaks
Changed Navigation texts into buttons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <script type="text/javascript">
           $(document).ready(function() {
             $('#fullpage').fullpage({
-              sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', '#ccddff', '#551A8B',  '#89cff0'],
+              sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', '#551A8B', '#ccddff',  '#89cff0'],
               anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', '5thpage', '6thpage','lastPage'],
               menu: '#menu',
             });
@@ -62,8 +62,18 @@
                     <h1>PART 1: <br>
                     Understanding Your Prostate And It's Functions</h1>                    
                     <!-- <div class="fp-controlArrow fp-prev">Hello World</div> -->
-                    <div class="fp-controlArrow fp-next">
-                      <h2>Click Next >></h2>
+                                          
+                  </div>
+                  <div class="container nav-btn">
+                    <div class="row">
+                      <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                        <button class="btn btn-default"><< Previous</button>
+                      </div>
+                      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                      </div>
+                      <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                        <button class="btn btn-default">Next >></button>
+                      </div>
                     </div>
                   </div>
                 </div>                
@@ -85,11 +95,20 @@
                           Prostate is a gland that helps make semen which is released during ejaculation. The prostate produces another substance called PSA (prostate specific antigen). PSA level can be higher than normal in men with prostate cancer as well as in some other benign prostate conditions such as BPH/benign hyperplasia (prostate enlargement) or prostatitis (infection of the prostate).
                         </p>
                       </div>
+                    </div>
+                    <div class="container nav-btn">
+                      <div class="row">
+                        <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                          <button class="btn btn-default"><< Previous</button>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                        </div>
+                        <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                          <button class="btn btn-default">Next >></button>
+                        </div>
+                      </div>
                     </div>              
-                  </div>
-                  <div class="fp-controlArrow fp-next">
-                    <h2>Click Next >></h2>
-                  </div>
+                  </div>                   
                 </div>
               </header>              
             </div>
@@ -128,9 +147,17 @@
                       </div>
                     </div>              
                   </div>
-                  <div class="scroll-down-btn">
-                    <h3><< PART 1 ENDS >></h3>
-                  </div>                  
+                  <div class="container nav-btn">
+                    <div class="row">
+                      <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                      </div>
+                      <div class="scroll-down-btn col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
+                        <button class="btn btn-default"><< Next Section >></button>
+                      </div>
+                      <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                      </div>
+                    </div>
+                  </div>               
                 </div>
               </header>
             </div>
@@ -142,8 +169,17 @@
                   <div class="header-content-inner">
                     <h1>PART 2: <br>
                     Overview of Prostate Cancer</h1>
-                    <div class="fp-controlArrow fp-next">
-                      <h2>Click Next >></h2>
+                    <div class="container nav-btn">
+                      <div class="row">
+                        <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                          <button class="btn btn-default"><< Previous</button>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                        </div>
+                        <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                          <button class="btn btn-default">Next >></button>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -167,8 +203,17 @@
                       </div>
                     </div>              
                   </div>
-                  <div class="fp-controlArrow fp-next">
-                    <h2>Click Next >></h2>
+                  <div class="container nav-btn">
+                    <div class="row">
+                      <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                        <button class="btn btn-default"><< Previous</button>
+                      </div>
+                      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                      </div>
+                      <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                        <button class="btn btn-default">Next >></button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </header>              
@@ -215,8 +260,17 @@
                       </div>                      
                     </div>              
                   </div>
-                  <div class="fp-controlArrow fp-next">
-                    <h2>Click Next >></h2>
+                  <div class="container nav-btn">
+                    <div class="row">
+                      <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                        <button class="btn btn-default"><< Previous</button>
+                      </div>
+                      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                      </div>
+                      <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                        <button class="btn btn-default">Next >></button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </header>              
@@ -240,8 +294,17 @@
                       </div>
                     </div>              
                   </div>
-                  <div class="fp-controlArrow fp-next">
-                    <h2>Click Next >></h2>
+                  <div class="container nav-btn">
+                    <div class="row">
+                      <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                        <button class="btn btn-default"><< Previous</button>
+                      </div>
+                      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                      </div>
+                      <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                        <button class="btn btn-default">Next >></button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </header>              
@@ -277,8 +340,17 @@
                       </div>
                     </div>              
                   </div>
-                  <div class="fp-controlArrow fp-next">
-                    <h2>Click Next >></h2>
+                  <div class="container nav-btn">
+                    <div class="row">
+                      <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                        <button class="btn btn-default"><< Previous</button>
+                      </div>
+                      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                      </div>
+                      <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                        <button class="btn btn-default">Next >></button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </header>              
@@ -314,8 +386,17 @@
                     </div>  
                                 
                   </div>
-                  <div class="fp-controlArrow fp-next">
-                    <h2>Click Next >></h2>
+                  <div class="container nav-btn">
+                    <div class="row">
+                      <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                        <button class="btn btn-default"><< Previous</button>
+                      </div>
+                      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                      </div>
+                      <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                        <button class="btn btn-default">Next >></button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </header>              
@@ -361,8 +442,16 @@
                         </div>
                       </div>
                     </div>
-                    <div class="scroll-down-btn">
-                    <h3><< PART 2 ENDS >></h3>
+                    <div class="container nav-btn">
+                      <div class="row">
+                        <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                        </div>
+                        <div class="scroll-down-btn col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
+                          <button class="btn btn-default"><< Next Section >></button>
+                        </div>
+                        <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                        </div>
+                      </div>
                   </div> 
                 </div>
               </header>              
@@ -375,8 +464,17 @@
                   <div class="header-content-inner">
                     <h1>PART 3: <br>
                     Treatment Choices</h1>
-                    <div class="fp-controlArrow fp-next">
-                      <h2>Click Next >></h2>
+                    <div class="container nav-btn">
+                      <div class="row">
+                        <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                          <button class="btn btn-default"><< Previous</button>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                        </div>
+                        <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                          <button class="btn btn-default">Next >></button>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -476,9 +574,18 @@
                     </div>
                   </div>
                 </div>
-                <div class="fp-controlArrow fp-next">
-                  <h2>Click Next >></h2>
-                </div>
+                <div class="container nav-btn">
+                    <div class="row">
+                      <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                        <button class="btn btn-default"><< Previous</button>
+                      </div>
+                      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                      </div>
+                      <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                        <button class="btn btn-default">Next >></button>
+                      </div>
+                    </div>
+                  </div>
               </section>
             </div>
             <div class="slide" id="slide23">
@@ -641,8 +748,17 @@
                     </div>
                   </div>
                 </div>
-                <div class="fp-controlArrow fp-next">
-                  <h2>Click Next >></h2>
+                <div class="container nav-btn">
+                  <div class="row">
+                    <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                      <button class="btn btn-default"><< Previous</button>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                    </div>
+                    <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                      <button class="btn btn-default">Next >></button>
+                    </div>
+                  </div>
                 </div>
               </section>
             </div>
@@ -838,8 +954,16 @@
                     </div>
                   </div>
                 </div>
-                <div class="scroll-down-btn">
-                  <h3><< PART 3 ENDS >></h3>
+                <div class="container nav-btn">
+                  <div class="row">
+                    <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                    </div>
+                    <div class="scroll-down-btn col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
+                      <button class="btn btn-default"><< Next Section >></button>
+                    </div>
+                    <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                    </div>
+                  </div>
                 </div> 
               </section>
             </div>
@@ -851,8 +975,17 @@
                   <div class="header-content-inner">
                     <h1>PART 4: <br>
                     Long Term Side Effects Of Treatment Choices</h1>
-                    <div class="fp-controlArrow fp-next">
-                      <h2>Click Next >></h2>
+                    <div class="container nav-btn">
+                      <div class="row">
+                        <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                          <button class="btn btn-default"><< Previous</button>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                        </div>
+                        <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                          <button class="btn btn-default">Next >></button>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -1071,8 +1204,17 @@
                   </div>
                 </div>
               </div>
-              <div class="fp-controlArrow fp-next">
-                <h2>Click Next >></h2>
+              <div class="container nav-btn">
+                <div class="row">
+                  <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                    <button class="btn btn-default"><< Previous</button>
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                  </div>
+                  <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                    <button class="btn btn-default">Next >></button>
+                  </div>
+                </div>
               </div>
             </section>
           </div>
