--- a/priority.html
+++ b/priority.html
@@ -2,10 +2,11 @@
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.debug.js"></script>
-
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-
+<div class="container">
 <script>
 
 function getCheckedBoxes(chkboxName) {	//function to collect all ticked checkboxes
@@ -53,7 +54,7 @@ var untick = "&#9744";
 
 		function addSupport(checkbox){	//function utk add checkbox
 
-		var expand = "&ensp;<label><input type='checkbox' name='concerns[]' value='->   Family support'>Family support</label><br/>&ensp;<label><input type='checkbox' name='concerns[]' value='->   Financial support'>Financial support</label><br/>&ensp;<label><input type='checkbox' name='concerns[]' value='->   Spiritual support'>Spiritual support</label><br/>&ensp;<label><input type='checkbox' name='concerns[]' value='->   Support from doctors'>Support from doctors</label><br/>&ensp;<label><input type='checkbox' name='concerns[]' value='->   Peers/ support group'>Peers/ support group</label><br/>";
+		var expand = "<div class='checkbox'><label><input type='checkbox' name='concerns[]' value='->   Family support'>Family support</label></div><div class='checkbox'><label><input type='checkbox' name='concerns[]' value='->   Financial support'>Financial support</label></div><div class='checkbox'><label><input type='checkbox' name='concerns[]' value='->   Spiritual support'>Spiritual support</label></div><div class='checkbox'><label><input type='checkbox' name='concerns[]' value='->   Support from doctors'>Support from doctors</label></div><div class='checkbox'><label><input type='checkbox' name='concerns[]' value='->   Peers/ support group'>Peers/ support group</label></div>";
 
 		if(checkbox.checked){
 			document.getElementById("expandSupport").innerHTML = expand;
@@ -64,7 +65,7 @@ var untick = "&#9744";
 	}
 
 	function addKnowledge(checkbox){	//function utk add input text
-		var expand = "<input type='text' name='knowledge' id='knowledge'/>";
+		var expand = "<input type='text' class='form-control' name='knowledge' id='knowledge'/>";
 		if(checkbox.checked){
 			document.getElementById("expandKnowledge").innerHTML = expand;
 		}else{
@@ -113,7 +114,7 @@ var untick = "&#9744";
 </script>
 <div id="outputLocation">
 <form id="patientTreatmentGoals" name ="patientTreatmentGoals">
-	<table class="custom-matrix">
+	<table class="table table-striped table-bordered custom-matrix">
 	<thead>
 		<tr>
 			<th>Goals</th>
@@ -125,39 +126,39 @@ var untick = "&#9744";
 	<tbody>
 		<tr>
 			<td>Chance of survival</td>
-			<td><input type="radio" name="treatmentGoals[0]" value="1" required/></td>
-			<td><input type="radio" name="treatmentGoals[0]" value="2" checked/></td>
-			<td><input type="radio" name="treatmentGoals[0]" value="3"/></td>
+			<td><center><input type="radio" name="treatmentGoals[0]" value="1" required/></center></center></td>
+			<td><center><input type="radio" name="treatmentGoals[0]" value="2" checked/></center></td>
+			<td><center><input type="radio" name="treatmentGoals[0]" value="3"/></center></td>
 		</tr>
 		<tr>
 			<td>Curing the cancer</td>
-			<td><input type="radio" name="treatmentGoals[1]" value="1" required/></td>
-			<td><input type="radio" name="treatmentGoals[1]" value="2" checked/></td>
-			<td><input type="radio" name="treatmentGoals[1]" value="3"/></td>
+			<td><center><input type="radio" name="treatmentGoals[1]" value="1" required/></center></td>
+			<td><center><input type="radio" name="treatmentGoals[1]" value="2" checked/></center></td>
+			<td><center><input type="radio" name="treatmentGoals[1]" value="3"/></center></td>
 		</tr>
 		<tr>
 			<td>Curing any symptoms I may have</td>
-			<td><input type="radio" name="treatmentGoals[2]" value="1" required/></td>
-			<td><input type="radio" name="treatmentGoals[2]" value="2" checked/></td>
-			<td><input type="radio" name="treatmentGoals[2]" value="3"/></td>
+			<td><center><input type="radio" name="treatmentGoals[2]" value="1" required/></center></td>
+			<td><center><input type="radio" name="treatmentGoals[2]" value="2" checked/></center></td>
+			<td><center><input type="radio" name="treatmentGoals[2]" value="3"/></center></td>
 		</tr>
 		<tr>
 			<td>Having the best possible sexual performance</td>
-			<td><input type="radio" name="treatmentGoals[3]" value="1" required/></td>
-			<td><input type="radio" name="treatmentGoals[3]" value="2" checked/></td>
-			<td><input type="radio" name="treatmentGoals[3]" value="3"/></td>
+			<td><center><input type="radio" name="treatmentGoals[3]" value="1" required/></center></td>
+			<td><center><input type="radio" name="treatmentGoals[3]" value="2" checked/></center></td>
+			<td><center><input type="radio" name="treatmentGoals[3]" value="3"/></center></td>
 		</tr>
 		<tr>
 			<td>Having a good bowel and bladder control</td>
-			<td><label><input type="radio" name="treatmentGoals[4]" value="1" required/></label></td>
-			<td><label><input type="radio" name="treatmentGoals[4]" value="2" checked/></label></td>
-			<td><label><input type="radio" name="treatmentGoals[4]" value="3"/></label></td>
+			<td><center><input type="radio" name="treatmentGoals[4]" value="1" required/></center></td>
+			<td><center><input type="radio" name="treatmentGoals[4]" value="2" checked/></center></td>
+			<td><center><input type="radio" name="treatmentGoals[4]" value="3"/></center></td>
 		</tr>
 		<tr>
 			<td>Cost of treatment</td>
-			<td><input type="radio" name="treatmentGoals[5]" value="1" required/></td>
-			<td><input type="radio" name="treatmentGoals[5]" value="2" checked/></td>
-			<td><input type="radio" name="treatmentGoals[5]" value="3"/></td>
+			<td><center><input type="radio" name="treatmentGoals[5]" value="1" required/></center></td>
+			<td><center><input type="radio" name="treatmentGoals[5]" value="2" checked/></center></td>
+			<td><center><input type="radio" name="treatmentGoals[5]" value="3"/></center></td>
 		</tr>
 	</tbody>
 	</table>
@@ -166,20 +167,34 @@ var untick = "&#9744";
 
 
 <form id="patientConcerns" name="patientConcerns">
-<label><input type="checkbox" name="concerns[]" onchange='addKnowledge(this);' value="I dont have enough information to make a choice.I want to know more about ... ">I dont have enough information to make a choice.I want to know more about ... </label><br/>
+
+<div class="checkbox"><label><input type="checkbox" name="concerns[]" onchange='addKnowledge(this);' value="I dont have enough information to make a choice.I want to know more about ... ">I dont have enough information to make a choice.I want to know more about ... </label></div>
+
 <div id="expandKnowledge"></div>
-<label><input type="checkbox" name="concerns[]" value="I am concerned about the treatment cost.">I am concerned about the treatment cost.</label><br/>
-<label><input type="checkbox" name="concerns[]" value="I want to know about how treatment will affect my lifestyle.">I want to know about how treatment will affect my lifestyle.</label><br/>
-<label><input type="checkbox" name="concerns[]" value="I want to know about how treatment will affect my work.">I want to know about how treatment will affect my work.</label><br/>
-<label><input type="checkbox" name="concerns[]" value="I have religious concerns about the treatment.">I have religious concerns about the treatment.</label><br/>
-<label><input type="checkbox" name="concerns[]" value="I want to know more about survival.">I want to know more about survival.</label><br/>
-<label><input type="checkbox" name="concerns[]" value="I want to know more about the experiences of other people with prostate cancer.">I want to know more about the experiences of other people with prostate cancer.</label><br/>
-<label><input type="checkbox" name="concerns[]" value="I want to know more about diet during treatment.">I want to know more about diet during treatment.</label><br/>
-<label><input type="checkbox" name="concerns[]" onchange='addSupport(this);' value="I need more support in making a decision. I want more:">I need more support in making a decision. I want more :</label><br/>
+
+<div class="checkbox"><label><input type="checkbox" name="concerns[]" value="I am concerned about the treatment cost.">I am concerned about the treatment cost.</label></div>
+
+<div class="checkbox"><label><input type="checkbox" name="concerns[]" value="I want to know about how treatment will affect my lifestyle.">I want to know about how treatment will affect my lifestyle.</label></div>
+
+<div class="checkbox"><label><input type="checkbox" name="concerns[]" value="I want to know about how treatment will affect my work.">I want to know about how treatment will affect my work.</label></div>
+
+<div class="checkbox"><label><input type="checkbox" name="concerns[]" value="I have religious concerns about the treatment.">I have religious concerns about the treatment.</label></div>
+
+<div class="checkbox"><label><input type="checkbox" name="concerns[]" value="I want to know more about survival.">I want to know more about survival.</label></div>
+
+<div class="checkbox"><label><input type="checkbox" name="concerns[]" value="I want to know more about the experiences of other people with prostate cancer.">I want to know more about the experiences of other people with prostate cancer.</label></div>
+
+<div class="checkbox"><label><input type="checkbox" name="concerns[]" value="I want to know more about diet during treatment.">I want to know more about diet during treatment.</label></div>
+
+<div class="checkbox"><label><input type="checkbox" name="concerns[]" onchange='addSupport(this);' value="I need more support in making a decision. I want more:">I need more support in making a decision. I want more :</label></div>
+
 <div id="expandSupport"></div>
-<label><input type="checkbox" name="concerns[]" value="I am distressed (e.g. shocked, confused, angry, panicked)">I am distressed (e.g. shocked, confused, angry, panicked)</label><br/>
+
+<div class="checkbox"><label><input type="checkbox" name="concerns[]" value="I am distressed (e.g. shocked, confused, angry, panicked)">I am distressed (e.g. shocked, confused, angry, panicked)</label><br/>
+
 </form>
 <button onclick="javascript:retrieveGoals(patientTreatmentGoals);">Submit</button>
 </div>
 </body>
+</div>
 </html>
