--- a/priority.html
+++ b/priority.html
@@ -104,6 +104,7 @@ var untick = "&#9744";
     $(document).ready(function () {
     $('.custom-matrix tr').click(function (e) {
         var cell = $(e.target).get(0); // This is the TD you clicked
+        var c = $(cell).parents('tr').children('td');
         $(cell).find("input" ).attr('checked', true);
         //mark true
         var rad = $(cell).children('input');
@@ -111,51 +112,54 @@ var untick = "&#9744";
     });
 });
 
+
+
 </script>
 <div id="outputLocation">
+<h1><center><b>Treatment Goals</b></center></h1>
 <form id="patientTreatmentGoals" name ="patientTreatmentGoals">
 	<table class="table table-striped table-bordered custom-matrix">
 	<thead>
 		<tr>
-			<th>Goals</th>
-			<th>Not very important</th>
-			<th>Important</th>
-			<th>Very important</th>
+			<th><center>Goals</center></th>
+			<th><center>Not very important</center></th>
+			<th><center>Important</center></th>
+			<th><center>Very important</center></th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr>
-			<td>Chance of survival</td>
+			<th>Chance of survival</th>
 			<td><center><input type="radio" name="treatmentGoals[0]" value="1" required/></center></center></td>
 			<td><center><input type="radio" name="treatmentGoals[0]" value="2" checked/></center></td>
 			<td><center><input type="radio" name="treatmentGoals[0]" value="3"/></center></td>
 		</tr>
 		<tr>
-			<td>Curing the cancer</td>
+			<th>Curing the cancer</th>
 			<td><center><input type="radio" name="treatmentGoals[1]" value="1" required/></center></td>
 			<td><center><input type="radio" name="treatmentGoals[1]" value="2" checked/></center></td>
 			<td><center><input type="radio" name="treatmentGoals[1]" value="3"/></center></td>
 		</tr>
 		<tr>
-			<td>Curing any symptoms I may have</td>
+			<th>Curing any symptoms I may have</th>
 			<td><center><input type="radio" name="treatmentGoals[2]" value="1" required/></center></td>
 			<td><center><input type="radio" name="treatmentGoals[2]" value="2" checked/></center></td>
 			<td><center><input type="radio" name="treatmentGoals[2]" value="3"/></center></td>
 		</tr>
 		<tr>
-			<td>Having the best possible sexual performance</td>
+			<th>Having the best possible sexual performance</th>
 			<td><center><input type="radio" name="treatmentGoals[3]" value="1" required/></center></td>
 			<td><center><input type="radio" name="treatmentGoals[3]" value="2" checked/></center></td>
 			<td><center><input type="radio" name="treatmentGoals[3]" value="3"/></center></td>
 		</tr>
 		<tr>
-			<td>Having a good bowel and bladder control</td>
+			<th>Having a good bowel and bladder control</th>
 			<td><center><input type="radio" name="treatmentGoals[4]" value="1" required/></center></td>
 			<td><center><input type="radio" name="treatmentGoals[4]" value="2" checked/></center></td>
 			<td><center><input type="radio" name="treatmentGoals[4]" value="3"/></center></td>
 		</tr>
 		<tr>
-			<td>Cost of treatment</td>
+			<th>Cost of treatment</th>
 			<td><center><input type="radio" name="treatmentGoals[5]" value="1" required/></center></td>
 			<td><center><input type="radio" name="treatmentGoals[5]" value="2" checked/></center></td>
 			<td><center><input type="radio" name="treatmentGoals[5]" value="3"/></center></td>
@@ -165,7 +169,7 @@ var untick = "&#9744";
 	
 </form>
 
-
+<h1><center><b>Patient's Concerns</b></center></h1>
 <form id="patientConcerns" name="patientConcerns">
 
 <div class="checkbox"><label><input type="checkbox" name="concerns[]" onchange='addKnowledge(this);' value="I dont have enough information to make a choice.I want to know more about ... ">I dont have enough information to make a choice.I want to know more about ... </label></div>
@@ -191,9 +195,8 @@ var untick = "&#9744";
 <div id="expandSupport"></div>
 
 <div class="checkbox"><label><input type="checkbox" name="concerns[]" value="I am distressed (e.g. shocked, confused, angry, panicked)">I am distressed (e.g. shocked, confused, angry, panicked)</label><br/>
-
 </form>
-<button onclick="javascript:retrieveGoals(patientTreatmentGoals);">Submit</button>
+<button type="button" class="btn btn-success" onclick="javascript:retrieveGoals(patientTreatmentGoals);">Submit</button>
 </div>
 </body>
 </div>
